class-management-student-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: class-management-student-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30880

---
apiVersion: v1
kind: Service
metadata:
  name: student-service-mysql
spec:
  selector:
    app: student-service-mysql
  ports:
    - port: 3307
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: student-service-phpmyadmin
spec:
  selector:
    app: student-service-phpmyadmin
  type: NodePort
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
      nodePort: 30081
