class-management-student-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /student
          pathType: Prefix
          backend:
            service:
              name: student-service
              port:
                number: 8080
